<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- App -->
    <string name="app_name">QuoteTube Beta</string>

    <!-- Activities titles -->
    <string name="title_activity_main">Your quotes</string>
    <string name="title_activity_search">Search for video</string>
    <string name="title_activity_quote_creation" tools:ignore="TypographyFractions">Create new quote (1/2)</string>
    <string name="title_activity_quote_creation2">Create new quote (2/2)</string>
    <string name="title_activity_quote_edition">Edit quote</string>

    <!-- Splash texts -->
    <string name="splash_loading_start">Loading…</string>
    <string name="splash_loading_perm">Checking permissions…</string>
    <string name="splash_loading_qpy">Checking QPython…</string>
    <string name="splash_loading_qpy2">Downloading QPython…</string>
    <string name="splash_loading_qpy3">Please uninstall QPython</string>
    <string name="splash_loading_qpy4">Installing QPython…</string>
    <string name="splash_loading_qpy5">Initializing QPython…</string>
    <string name="splash_loading_dir">Checking folders</string>
    <string name="splash_loading_data">Loading user\'s data</string>
    <string name="splash_loading_ytdl">Checking Youtube-dl… (long)</string>
    <string name="splash_loading_ytdl2">Installing Youtube-dl…</string>
    <string name="splash_loading_ytdl3">Upgrading Youtube-dl…</string>
    <string name="splash_loading_ffmpeg">Loading FFmpeg…</string>
    <string name="splash_loading_done">Launching…</string>

    <!-- Quote list -->
    <string name="action_about">About</string>
    <string name="quote_list_empty">Your quote list is empty,\ntry creating a new quote with the button below.</string>

    <!-- Search texts -->
    <string name="action_search">Search for video</string>
    <string name="youtube_search_hint1">Please search something with the bar above</string>
    <string name="youtube_search_hint2">You don\'t seem to be connected</string>
    <string name="youtube_search_hint3">There is no results for this search</string>
    <string name="video_views" formatted="false">%s views</string>
    <string name="video_upvotes" formatted="false" translatable="false">%s &#11014;</string>
    <string name="video_downvotes" formatted="false" translatable="false">%s &#11015;</string>

    <!-- Quote creation 1 texts -->
    <string name="player_back_1" translatable="false">-0.2s</string>
    <string name="player_back_2" translatable="false">-0.5s</string>
    <string name="player_back_3" translatable="false">-1s</string>
    <string name="player_forw_1" translatable="false">+0.2s</string>
    <string name="player_forw_2" translatable="false">+0.5s</string>
    <string name="player_forw_3" translatable="false">+1s</string>
    <string name="creation_title1">Limits</string>
    <string name="creation_tip1">When you try the quote, the stop time of the player  may not be accurate.</string>
    <string name="quote_start">Start at :</string>
    <string name="quote_start_button">Set start</string>
    <string name="quote_goto_button">Go to</string>
    <string name="quote_stop">Stop at :</string>
    <string name="quote_stop_button">Set stop</string>
    <string name="quote_current">Position :</string>
    <string name="quote_duration">Duration :</string>
    <string name="quote_try">Try quote</string>
    <string name="quote_try_2">Stop</string>
    <string name="quote_validate">Validate positions</string>


    <!-- Quote creation 2 texts -->
    <string name="creation2_title1">Options</string>
    <string name="creation2_title2">Button preview</string>
    <string name="quote_fade_out">Fade out 1 second before end</string>
    <string name="null_quote_name">Set name</string>
    <string name="quote_create">Create quote</string>

    <!-- Quote factory texts -->
    <string name="factory_start">Creating…</string>
    <string name="factory_dl">Downloading…\n(This might take a while)</string>
    <string name="factory_extract">Extracting…</string>
    <string name="factory_cutting">Cutting…</string>
    <string name="factory_clean">Cleaning…</string>
    <string name="factory_done">Adding to list…</string>

    <!-- Quote edition texts -->
    <string name="edition_title1">Source video</string>n
    <string name="video_info" formatted="false"><![CDATA[<p><b>Title : </b>%s<br/><b>Author : </b>%s<br/><b>Date : </b>%s</p>]]></string>
    <string name="video_watch">Watch</string>
    <string name="edition_title2">Appearance</string>
    <string name="quote_delete">Delete</string>
    <string name="quote_save">Save</string>

    <!--dialog buttons-->
    <string name="dialog_close">Close</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!--dialog content-->
    <string name="dialog_delete_quote_title">Delete quote ?</string>
    <string name="dialog_delete_quote_content" formatted="false">Do you really want to delete the quote \'%s\' ?</string>
    <string name="dialog_about_title">About QuoteTube</string>
    <string name="dialog_about_content" formatted="false">
        Version : %s\n
        Developer : Klemek\n
        Icons : FontAwesome\n
        Libs : \n
        -GeometricProgressView (Bohush)\n
        -FFmpegAndroid (Writingminds)\n
        -Colorpicker (Jrummyapps)\n
        -Material-dialogs (Afollestad)\n
        -Picasso (Squareup)\n
    </string>
    <string name="dialog_update_title">Update available</string>
    <string name="dialog_update_content">A new update is available, do you want to update now ?</string>
    <string name="dialog_update_negative">Don\'t show again</string>
    <string name="dialog_welcome_title">Welcome to QuoteTube !</string>
    <string name="dialog_welcome_content">QuoteTube is a simple soundbox app where you can extract a part of any Youtube video and play \"quotes\" (the extracted sound) indefinitely without Internet. Have fun !</string>
    <string name="dialog_welcome_positive">Thanks</string>
    <string name="dialog_updated_title">QuoteTube Beta 1.5</string>
    <string name="dialog_updated_content">
        Thank you for updating QuoteTube !\n\n
        Changelog :\n
        - Slightly changed colors\n
        - Suggestions in youtube searching
        - French translation
        - Multiline on quote name
        - Welcome and update messages\n
        - Some fixes\n
    </string>

    <!-- Errors dialogs and toasts -->
    <string name="error_noqpy_title">QPython 1.2.5 not installed</string>
    <string name="error_noqpy_content">In order to run this app you must install a specific version of QPython that will be downloaded now.</string>
    <string name="error_noqpy_positive">Ok, do it !</string>

    <string name="error_nointernet_title">Not connected</string>
    <string name="error_nointernet_content">You need to be connected to the Internet to finish installing</string>
    <string name="error_nointernet_content2">You need to be connected to the Internet to download the sound</string>

    <string name="error_noffmpeg_title">FFmpeg failed loading</string>
    <string name="error_noffmpeg_content">Your device does not support FFmpeg, you will not be able to create new quotes.</string>

    <string name="error_ytdlfail_title">Youtube-dl installation failed</string>
    <string name="error_ytdlfail_content">Please check the following:\n
        -You are connected to the Internet.\n
        -You have enough space on your device.</string>

    <string name="error_quote_duration" formatted="false">The quote length must be less than %.1f s</string>
    <string name="error_quote_name">Please set a name to your quote</string>

    <string name="error_generic_title">Error</string>
    <string name="error_generic_content" formatted="false">Error %d : \n%s</string>

    <string name="error_wrongqpy_content">You have another version of QPython, please uninstall it in order to use this app. (We need the version 1.2.5 that will be downloaded after)</string>
    <string name="error_wrongqpy_title">Wrong version of QPython</string>
    <string name="error_wrongqpy_negative">Never !</string>

    <string name="error_unknown_title">Unexpected error</string>
    <string name="error_unkown_content">An unexpected error has occured : %s</string>

    <string name="error_permission_title">Storage permission denied</string>
    <string name="error_permission_content">QuoteTube need storage permission to store the quotes and execute Python scripts. Are you sure you want to deny this permission ?</string>
    <string name="error_permission_content2">QuoteTube need storage permission to store the quotes and execute python scripts. Pease go to your settings to change it.</string>
    <string name="error_permission_positive">Re-Try</string>
    <string name="error_permission_negative">I\'m sure</string>

    <string name="error_no_videoinfo">No video linked to this quote</string>

    <!-- image contentDescription -->
    <string name="desc_title" translatable="false">QuoteTube title</string>
    <string name="desc_quote_image" translatable="false">Quote image</string>
    <string name="desc_quote_icon" translatable="false">Quote icon</string>
    <string name="desc_channel" translatable="false">Channel thumbnail</string>
    <string name="desc_video" translatable="false">Video thumbnail</string>
</resources>
